# flashclaw_cli_plugins

./: .gitignore  README.md
call_svc/: README.md  call_svc_cli.py  pyproject.toml
call_svc/core/: client.py  session.py
call_svc/flashclaw_cli_plugin/: NAMESPACE.md
call_svc/flashclaw_cli_plugin/call_svc/: __main__.py  call_svc_cli.py
call_svc/flashclaw_cli_plugin/call_svc/core/: client.py  session.py
call_svc/flashclaw_cli_plugin/call_svc/skills/: SKILL.md
call_svc/flashclaw_cli_plugin/call_svc/tests/: TEST.md  test_core.py
call_svc/flashclaw_cli_plugin/call_svc/utils/: repl_skin.py
call_svc/skills/: SKILL.md
call_svc/tests/: test_core.py
flashrev_aiflow/: CHANGELOG.md  README.md  pyproject.toml
flashrev_aiflow/examples/: README.md  contacts.example.csv  pitch.example.json
flashrev_aiflow/flashclaw_cli_plugin/: NAMESPACE.md
flashrev_aiflow/flashclaw_cli_plugin/flashrev_aiflow/: __init__.py  __main__.py  flashrev_aiflow_cli.py  wizard.py
flashrev_aiflow/flashclaw_cli_plugin/flashrev_aiflow/core/: client.py  session.py
flashrev_aiflow/flashclaw_cli_plugin/flashrev_aiflow/skills/: SKILL.md
flashrev_aiflow/flashclaw_cli_plugin/flashrev_aiflow/tests/: TEST.md  test_core.py
flashrev_aiflow/flashclaw_cli_plugin/flashrev_aiflow/utils/: output.py
