[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashclaw-cli-plugin-flashrev-aiflow"
version = "0.3.3"
description = "Agent-friendly CLI for FlashRev AIFlow — email outreach automation, routed via auth-gateway-svc."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
flashclaw-cli-plugin-flashrev-aiflow = "flashclaw_cli_plugin.flashrev_aiflow.flashrev_aiflow_cli:main"

[tool.setuptools.packages.find]
include = ["flashclaw_cli_plugin.*"]

[tool.setuptools.package-data]
"flashclaw_cli_plugin.flashrev_aiflow" = ["skills/*.md"]
